--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,9 +7,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    strategy:
+      fail-fast: true
+      matrix:
+        dotnet-version: ["7.0.x"]
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ matrix.dotnet-version }}
     - name: Set VERSION variable from tag
       run: echo "VERSION=${GITHUB_REF##*/}" >> $GITHUB_ENV
     - name: Build
